--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1068,8 +1068,8 @@ footer {
 .tc-main {
     z-index: 100000;
     
-    width: 80%;
-    max-width: 800px;
+    width: auto;
+    max-width: 450px;
     min-height: 200px;
     background-color: #ffffff;
     border-radius: 15px;
@@ -1087,8 +1087,11 @@ footer {
 }
 
 .tc-img {
-    width: 100%;
-    height: 100%;
+    max-width: 400px;
+    max-height: 500px;
+    width: auto;
+    height: auto;
+    object-fit: contain;
 }
 
 .tc.active {
